# TicketBooking

./: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_03_13_2140-990e5dee20a9_.py  2023_03_16_2335-d56d24850f38_.py  2023_03_17_0003-0bf9b5c2da79_.py
roombooking/: main.py
scripts/: entrypoint.sh  format.sh  lint.sh
tests/: test_main.py
ticketbooking/: main.py
ticketbooking/api/: routers.py
ticketbooking/api/events/: models.py
ticketbooking/api/events/routers/: event_type.py
ticketbooking/api/events/schemas/: event_type.py
ticketbooking/api/events/services/: event_type.py
ticketbooking/common/: db.py  env.py  models.py  schemas.py  tags.py  utils.py
ticketbooking/config/: db.py
