[tool.poetry]
name = "roombooking"
version = "0.1.0"
description = "Room booking Api"
authors = ["Marvin Alvarenga <marvinalexz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
uvicorn = {extras = ["standar"], version = "^0.20.0"}
SQLAlchemy = "^1.4"
alembic = "^1.10.2"
pydantic = "^1.10.6"
pytz = "^2022.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
pep8-naming = "^0.13.3"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
